fix: hotfix the ballots subresource path
