# openapi/spec/mvapi.0.0.0.oas2.json
@@ -457,56 +457,6 @@
                 ]
             }
         },
-        "/polls/{id}/proposals/{proposals}/ballots": {
-            "get": {
-                "tags": [
-                    "Ballot",
-                    "Proposal"
-                ],
-                "operationId": "api_polls_proposals_ballots_get_subresource",
-                "summary": "Retrieves the collection of Ballot resources.",
-                "produces": [
-                    "application/ld+json",
-                    "application/json",
-                    "text/html"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Ballot collection response",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/Ballot"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Resource not found"
-                    }
-                },
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "proposals",
-                        "in": "path",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "required": false,
-                        "description": "The collection page number",
-                        "type": "integer"
-                    }
-                ]
-            }
-        },
         "/polls/{id}/result": {
             "get": {
                 "tags": [
@@ -581,6 +531,58 @@
                         "schema": {
                             "$ref": "#/definitions/Ballot-create"
                         }
+                    }
+                ]
+            },
+            "get": {
+                "tags": [
+                    "Ballot",
+                    "Proposal"
+                ],
+                "operationId": "api_polls_proposals_ballots_get_subresource",
+                "summary": "Retrieves the collection of Ballot resources.",
+                "produces": [
+                    "application/ld+json",
+                    "application/json",
+                    "text/html"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ballot collection response",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Ballot"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Resource not found"
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "pollId",
+                        "in": "path",
+                        "required": true,
+                        "type": "string",
+                        "description": "Universally Unique IDentifier of the poll.",
+                        "example": "6c1c8973-2df3-4b5a-a17d-a3a921dba448"
+                    },
+                    {
+                        "name": "proposalId",
+                        "in": "path",
+                        "required": true,
+                        "type": "string",
+                        "description": "Universally Unique IDentifier of the proposal.",
+                        "example": "ebf2fda8-5f45-4a33-9758-40d7f5a74998"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "description": "The collection page number",
+                        "type": "integer"
                     }
                 ]
             }
@@ -917,7 +919,7 @@
     "definitions": {
         "Ballot": {
             "type": "object",
-            "description": "A Ballot holds a Judgment on a Proposal, by a Participant of a Poll.",
+            "description": "A Ballot holds a (single) Judgment on a Proposal, by a Participant of a Poll.",
             "properties": {
                 "uuid": {
                     "type": "string",
@@ -925,6 +927,7 @@
                 },
                 "id": {
                     "readOnly": true,
+                    "description": "Internal numerical id, technical pragmatism for ApiPlatform.",
                     "type": "integer"
                 },
                 "proposal": {
@@ -952,7 +955,7 @@
         },
         "Ballot-create": {
             "type": "object",
-            "description": "A Ballot holds a Judgment on a Proposal, by a Participant of a Poll.",
+            "description": "A Ballot holds a (single) Judgment on a Proposal, by a Participant of a Poll.",
             "properties": {
                 "grade": {
                     "description": "The Grade attributed by the Judge to the Proposal.",
@@ -962,7 +965,7 @@
         },
         "Ballot-created": {
             "type": "object",
-            "description": "A Ballot holds a Judgment on a Proposal, by a Participant of a Poll.",
+            "description": "A Ballot holds a (single) Judgment on a Proposal, by a Participant of a Poll.",
             "properties": {
                 "uuid": {
                     "type": "string",
@@ -982,7 +985,7 @@
         },
         "Ballot-read": {
             "type": "object",
-            "description": "A Ballot holds a Judgment on a Proposal, by a Participant of a Poll.",
+            "description": "A Ballot holds a (single) Judgment on a Proposal, by a Participant of a Poll.",
             "properties": {
                 "uuid": {
                     "type": "string",
@@ -1065,7 +1068,7 @@
                     "type": "string"
                 },
                 "scope": {
-                    "description": "The scope defines how the poll is accessible:\n`public`: Everyone may access the poll, and it will be publicly listed\n`unlisted`: Everyone may access the poll if they know its URI\n`private`: Only invited participants may participate\nThe default scope is `unlisted`.",
+                    "description": "The scope defines how and by whom the poll is accessible:\n`public`: Everyone may access the poll, and it will be publicly listed ;\n`unlisted`: Everyone may access the poll if they know its URI ;\n`private`: Only invited participants may participate ;\nThe default scope is `unlisted`.",
                     "type": "string"
                 },
                 "subject": {
@@ -1104,7 +1107,7 @@
                     "type": "string"
                 },
                 "scope": {
-                    "description": "The scope defines how the poll is accessible:\n`public`: Everyone may access the poll, and it will be publicly listed\n`unlisted`: Everyone may access the poll if they know its URI\n`private`: Only invited participants may participate\nThe default scope is `unlisted`.",
+                    "description": "The scope defines how and by whom the poll is accessible:\n`public`: Everyone may access the poll, and it will be publicly listed ;\n`unlisted`: Everyone may access the poll if they know its URI ;\n`private`: Only invited participants may participate ;\nThe default scope is `unlisted`.",
                     "type": "string"
                 },
                 "subject": {
